<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculo Imc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sexo">Sexo:</string>
    <string name="masc">Masculino</string>
    <string name="fem">Feminino</string>
    <string name="peso">Peso (kg)</string>
    <string name="altura">Altura (m)</string>
    <string name="mostrarPeso">Mostrar peso ideal</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="resultado">Resultado:</string>
    <string name="valorCalculado">Valor calculado:</string>
    <string name="pesoIdeal">Peso ideal:</string>

</resources>
